[package]
name = "richard"
version = "0.1.4"
edition = "2021"
authors = ["OpenSource Team <opensource@outscale.com>"]
license = "BSD-3-Clause"
description = "richard is a modular chatbot"
repository = "https://github.com/outscale/richard"
readme = "README.md"

[dependencies]
reqwest = {version = "0.12.1", default-features = false, features = ["http2", "json", "rustls-tls"]}
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
feed-rs = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.2"
regex = "1.10.3"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
simple-error = "0.3.0"
chrono = "0.4.35"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["cargo"] }

[dev-dependencies]
tokio-test = "0.4.3"
