[package]
name = "richard"
version = "0.1.5"
edition = "2021"
authors = ["OpenSource Team <opensource@outscale.com>"]
license = "BSD-3-Clause"
description = "richard is a modular chatbot"
repository = "https://github.com/outscale/richard"
readme = "README.md"

[dependencies]
reqwest = {version = "0.13.4", default-features = false, features = ["http2", "json", "default-tls", "form"]}
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.10"
feed-rs = "2.3.1"
lazy_static = "1.4.0"
log = "0.4.32"
rand = "0.10.1"
regex = "1.10.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simple-error = "0.3.2"
chrono = "0.4.45"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["cargo"] }

[dev-dependencies]
tokio-test = "0.4.4"
